--- a/frontend/src/components/Jobs/index.css
+++ b/frontend/src/components/Jobs/index.css
@@ -1,87 +1,101 @@
 .jobs-container {
-  display: flex;
-  gap: 20px;
-  background-color: #000;
-  color: #fff;
-  margin: 0;
-  padding: 20px 40px;
-  font-family: Roboto;
+    display: flex;
+    gap: 20px;
+    background-color: #000;
+    color: #fff;
+    margin: 0;
+    padding: 20px 40px;
+    padding-bottom: 0;
+    font-family: Roboto;
 }
 
 .jobs-container hr {
-  color: #cbd5e1;
-  margin-left: 20px;
-  width: 100%;
+    color: #cbd5e1;
+    margin-left: 20px;
+    width: 100%;
 }
 
 .filter-container {
-  width: 570px !important;
+    width: 570px !important;
 }
+
 .filter-heading {
-  font-size: 15px;
-  margin: 20px;
+    font-size: 15px;
+    margin: 20px;
 }
 
 .filters {
-  display: flex;
-  gap: 20px;
-  margin: 20px;
+    display: flex;
+    gap: 20px;
+    margin: 20px;
 }
 
 .filter-con {
-  list-style: none;
-  padding: 0;
+    list-style: none;
+    padding: 0;
 }
 
 .jobs-details-container {
-  padding: 10px;
+    padding: 10px;
+    padding-bottom: 0;
 }
 
 .search-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border: 1px solid #7e858e;
-  border-radius: 5px;
-  width: 550px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #7e858e;
+    border-radius: 5px;
+    width: 550px;
 }
 
 .search-input {
-  border: none;
-  background-color: transparent;
-  font-size: 20px;
-  outline: none;
-  width: 100%;
-  margin: 10px 20px;
-  color: #fff;
+    border: none;
+    background-color: transparent;
+    font-size: 20px;
+    outline: none;
+    width: 100%;
+    margin: 10px 20px;
+    color: #fff;
 }
 
 .search-button {
-  color: #fff;
-  background-color: #272727;
-  border: none;
-  font-size: 20px;
-  width: 80px;
-  padding: 10px 20px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  cursor: pointer;
+    color: #fff;
+    background-color: #272727;
+    border: none;
+    font-size: 20px;
+    width: 80px;
+    padding: 10px 20px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    cursor: pointer;
 }
 
 ul {
-  list-style: none;
-  padding: 0;
+    list-style: none;
+    padding: 0;
 }
 
 .jobs-search-failure {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 80vh;
-  width: 70vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+    width: 70vw;
 }
 
 .jobs-search-failure p {
-  color: #7e858e;
+    color: #7e858e;
+}
+
+.jobs-list-container {
+    margin-top: 10px;
+    overflow-y: scroll;
+    height: 77vh;
+    margin-bottom: 0;
+}
+
+.jobs-list-container::-webkit-scrollbar {
+    width: 8px;
 }
