--- a/frontend/src/components/Home/index.css
+++ b/frontend/src/components/Home/index.css
@@ -1,10 +1,12 @@
 .home-container {
   background-image: url('https://assets.ccbp.in/frontend/react-js/home-lg-bg.png');
   background-size: cover;
-  height: 90vh;
-  margin: 0;
+  height: 100vh;
+  margin: 0;  
   padding: 40px;
+  padding-top: 150px;
   font-family: "Roboto";
+  
 }
 
 .home-container h1 {
